--- a/fruitgame/fruitapp/templates/edit_fruit_set.html
+++ b/fruitgame/fruitapp/templates/edit_fruit_set.html
@@ -77,15 +77,14 @@
             <!-- Add buttons to update fruit1 field -->
             <h2>Select a Fruit</h2>
             <div class="btn-group mb-3" role="group" aria-label="Fruit buttons">
-                <button type="button" class="btn btn-outline-primary" onclick="addFruit('Apple')">Apple</button>
-                <button type="button" class="btn btn-outline-primary" onclick="addFruit('Banana')">Banana</button>
+                <button type="button" class="btn btn-outline-primary" onclick="addFruit('tomato')">tomato</button>
                 <button type="button" class="btn btn-outline-primary" onclick="addFruit('Cherry')">Cherry</button>
                 <button type="button" class="btn btn-outline-primary" onclick="addFruit('Grape')">Grape</button>
                 <button type="button" class="btn btn-outline-primary" onclick="addFruit('Kiwi')">Kiwi</button>
                 <button type="button" class="btn btn-outline-primary" onclick="addFruit('Lemon')">Lemon</button>
                 <button type="button" class="btn btn-outline-primary" onclick="addFruit('Orange')">Orange</button>
                 <button type="button" class="btn btn-outline-primary" onclick="addFruit('Strawberry')">Strawberry</button>
-                <button type="button" class="btn btn-outline-primary" onclick="addFruit('Mango')">Mango</button> <!-- New Fruit -->
+                <button type="button" class="btn btn-outline-primary" onclick="addFruit('waterlemon')">waterlemon</button> <!-- New Fruit -->
             </div>
 
             <!-- Reset fruit button -->
